feat: admin product crud

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.5.4'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id 'org.openapi.generator' version '7.14.0'
 }
 
 group = 'me.huypc'
@@ -10,7 +11,7 @@ description = 'Demo project for Spring Boot'
 
 java {
 	toolchain {
-		languageVersion = JavaLanguageVersion.of(24)
+		languageVersion = JavaLanguageVersion.of(21)
 	}
 }
 
@@ -24,10 +25,17 @@ repositories {
 	mavenCentral()
 }
 
+ext {
+	swaggerVersion = '2.2.34'
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	implementation 'org.springframework.boot:spring-boot-starter-cache'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
@@ -39,6 +47,45 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
+
+	// https://mvnrepository.com/artifact/io.swagger.core.v3/swagger-annotations
+    implementation "io.swagger.core.v3:swagger-annotations:${swaggerVersion}"
+
+	// mysql connector
+	runtimeOnly 'com.mysql:mysql-connector-j'
+}
+
+openApiValidate {
+    inputSpec.set("$rootDir/openapi/specs.yaml")
+}
+
+openApiGenerate {
+	inputSpec.set("$rootDir/openapi/specs.yaml")
+	generatorName.set("spring")
+	outputDir.set("$rootDir/openapi/output")
+
+	configOptions.set([
+		dateLibrary: 'java8',
+		interfaceOnly: 'true',
+		skipDefaultInterface: 'true',
+		apiPackage: 'me.huypc.elect_shop.generated.api',
+		modelPackage: 'me.huypc.elect_shop.generated.dto',
+		hideGenerationTimestamp: 'true',
+		sourceFolder: "",
+        useSpringBoot3: "true",
+        useJakartaEe: "true",
+        skipDefaultInterface: "true",
+        interfaceOnly: "true",
+        openApiNullable: "false",
+        useBeanValidation: "true",
+        performBeanValidation: "true",
+        library: "spring-boot"
+	])
+
+	// globalProperties = [
+	// 	apis: "true",
+	// 	models: "true"
+	// ]
 }
 
 tasks.named('test') {
