--- a/openapi/specs.yaml
+++ b/openapi/specs.yaml
@@ -223,7 +223,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/ProductUpsertDto'
+              $ref: '#/components/schemas/ProductUpsertForm'
       responses:
         '201':
           description: Product created successfully
@@ -256,7 +256,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/ProductUpsertDto'
+              $ref: '#/components/schemas/ProductUpsertForm'
       responses: 
         '200':
           description: Product updated successfully
@@ -322,7 +322,98 @@ paths:
                 $ref: '#/components/schemas/ErrorResponse'
               example:
                 error: "Internal server error"
-      
+  
+  /admin/deals/{id}:
+    put: 
+      operationId: updateDealExpiration
+      tags: 
+        - Admin
+      summary: Update the expiration date of an existing deal
+      description: |
+        Update the expiration date of an existing deal. Requires ADMIN role.
+      security: 
+        - BearerAuth: []
+      parameters: 
+        - $ref: '#/components/parameters/Id' 
+      requestBody: 
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/DealUpdateExpirationForm'
+      responses: 
+        '200':
+          description: Deal expiration updated successfully
+        '400':
+          description: Bad request - invalid input
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+              example:
+                error: "Invalid deal data"
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Deal not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+              example:
+                error: "Not found"
+        '50x':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+              example:
+                error: "Internal server error"
+  /admin/deals/{id}/products:
+    post:
+      operationId: createDealProducts
+      tags: 
+        - Admin
+      summary: Add products to a deal
+      description: |
+        Add products to a specific deal by its ID. Requires ADMIN role.
+      security: 
+        - BearerAuth: []
+      parameters: 
+        - $ref: '#/components/parameters/Id'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/MultiSelectForm'
+      responses:
+        '201':
+          description: Add products to deal successfully
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Deal not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+              example:
+                error: "Not found"
+        '50x':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+              example:
+                error: "Internal server error"
+
 components:
   securitySchemes:
     BearerAuth:
@@ -491,7 +582,7 @@ components:
           description: Total number of items available
           example: 100
     
-    ProductUpsertDto:
+    ProductUpsertForm:
       type: object
       required:
         - name
@@ -513,6 +604,36 @@ components:
           minimum: 1
           description: Price per unit of the product
           example: 499.99
+    
+    DealUpdateExpirationForm:
+      type: object
+      properties:
+        newStartAt:
+          type: string
+          format: date-time
+          description: New start date and time for the deal
+          example: 2024-01-15T10:30:00Z
+        newEndAt:
+          type: string
+          format: date-time
+          description: New end date and time for the deal
+          example: 2024-01-31T23:59:59Z
+      required: 
+        - newStartAt
+        - newEndAt
+
+    MultiSelectForm:
+      type: object
+      properties:
+        selectedItems:
+          type: array
+          items:
+            type: string
+          description: List of selected item IDs
+          example: ["12345", "67890"]
+      required:
+        - selectedItems
+
   parameters:
     Page:
       name: page
